# fund_alg

OC_lab/: CMakeLists.txt
OC_lab/example/: output.txt  posix_ipc-example-client  posix_ipc-example-client.c  posix_ipc-example-server  posix_ipc-example-server.c  test
OC_lab/lab1/: ch2.txt  child1  child1.c  filter_str.c  parent  parent.c  server_lab.c
lab1.1/: CMakeLists.txt  lab1.2  laba1.c  laba10.c  laba2.c  laba4.c  laba6_2.c  laba9.c  to_test_smth.c
lab1.1/Lab1/: laba10.c  laba2.c  laba3.c  laba5.c  laba6.c  laba9.c  out.txt
lab1.1/Lab1/lab4/: in.txt  laba4.c  out.txt  out_in.txt
lab1.1/Lab1/lab7/: in1.txt  in2.txt  laba7.c  out.txt
lab1.1/Lab1/lab8/: in.txt  laba8.c  out.txt
lab1.1/Lab2/: laba2_1.c  laba2_10.c  laba2_2.c  laba2_3.c  laba2_4.c  laba2_7.c  laba2_8.c  laba3.c
lab1.1/Lab2/lab3/: laba2_3.c
lab1.1/Lab3/: laba3_1.c  laba3_2.c
lab1.1/Lab3/lab10/: in.txt  laba3_10.c  out.txt
lab1.1/Lab3/lab3/: in.txt  in1  laba3_3.c  out.txt
lab1.1/Lab3/lab5/: in.txt  laba3_5.c  out.txt
lab1.1/Lab5/: laba5_1.cpp  laba5_3.cpp  laba5_4.cpp
lab1.1/Lab5/lab2/: encrypted.txt  lab5_2.cpp
lab1.1/lab4/: in.txt  laba4.c
lab1.1/lab7/: in2.txt  laba7.c  out.txt
lab1.1/lab8/: in.txt  laba8.c  out.txt
